Bug 886015 - Console js input looks broken on OS X; r=vporof

--- a/browser/themes/shared/devtools/webconsole.inc.css
+++ b/browser/themes/shared/devtools/webconsole.inc.css
@@ -84,6 +84,10 @@
   color: inherit;
 }
 
+.jsterm-input-container {
+  background: white;
+}
+
 .jsterm-input-node,
 .jsterm-complete-node {
   font-family: monospace;
